[tool.poetry]
name = "nnmmPKG"
version = "0.1.0"
description = ""
authors = ["shift <fantasy_world4423-git@yahoo.co.jp>"]
license = "GNU Lesser General Public License v3.0"

[tool.poetry.dependencies]
beautifulsoup4 = "^4.12.3"
coverage = "^7.5.3"
cryptography = "^42.0.7"
emoji = "^2.12.1"
freezegun = "^1.5.1"
httpx = "^0.25.0"
isort = "^5.13.2"
mock = "^5.0.1"
orjson = "^3.10.3"
pycodestyle = "^2.10.0"
pyperclip = "^1.8.2"
PySimpleGUI = "4.60.5"
python = ">=3.9,<4.0"
requests = "^2.32.3"
ruff = "^0.1.15"
sqlalchemy = "^1.4.52"
xmltodict = "^0.13.0"

[tool.poetry.dev-dependencies]

[tool.isort]
line_length = 119
multi_line_output = 9

[tool.ruff]
exclude = [
    ".coverage",
    ".venv",
    "venv",
    "__pycache__",
    ".git",
]
line-length = 119

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E", "F"]
ignore = ["F401", "F541", "F841"]
preview = true

[tool.ruff.format]
preview = true
quote-style = "double"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
