[project]
name = "nnmm"
version = "2.1.0"
description = "Add your description here"
authors = [
    { name = "shift" }
]
dependencies = [
    "beautifulsoup4>=4.14.2",
    "coverage>=7.12.0",
    "cryptography>=46.0.3",
    "emoji>=2.15.0",
    "freezegun>=1.5.5",
    "httpx>=0.28.1",
    "isort>=7.0.0",
    "mock>=5.2.0",
    "orjson>=3.11.4",
    "pycodestyle>=2.14.0",
    "pyperclip>=1.11.0",
    "pyqtdarktheme>=2.1.0",
    "pyside6>=6.10.1",
    "requests>=2.32.5",
    "ruff>=0.14.6",
    "sqlalchemy>=2.0.44",
    "xmltodict>=1.0.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
line_length = 119
multi_line_output = 9

[tool.ruff]
exclude = [
    "__pycache__",
    ".coveragerc",
    ".git",
    ".venv",
    "venv",
]
line-length = 119

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E", "F"]
ignore = ["F401", "F541", "F841"]
preview = true

[tool.ruff.format]
preview = true
quote-style = "double"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
unittest = "python -m unittest"
cover = {chain = ["coverage run --source . -m unittest discover", "coverage html -i"]}
copy_to_run = "./copy_to_run.bat"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nnmm"]
